--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/koa": "^2.0.49",
-    "@types/koa-router": "^7.0.42",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
@@ -22,6 +20,9 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/koa": "^2.0.49",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-router": "^7.0.42",
     "@types/koa-send": "^4.1.2",
     "@types/multer": "^1.3.8",
     "@types/uuid": "^3.4.5"
