--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "multer": "^1.4.2",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
     "rimraf": "^2.6.3",
     "uuid": "^3.3.2"
